--- a/roles/mariadb/templates/my.cnf.j2
+++ b/roles/mariadb/templates/my.cnf.j2
@@ -4,7 +4,7 @@ socket=/var/lib/mysql/mysql.sock
 
 user=mysql
 symbolic-links=0
-port={{mysql_port}}
+port=3306
 
 [mysqld_safe]
 log-error=/var/log/mariadb/mariadb.log
